chage side bar height

--- a/views/layouts/writer.hbs
+++ b/views/layouts/writer.hbs
@@ -17,8 +17,8 @@
         <h3 class="font-weight-bold text-white ">WebSite Name</h3>
     </div>
     <div class="account-container__content justify-content-between mt-5 mb-5 d-flex">
-        <div class="account-container__content__sidebar  pb-3">
-            <div class="account-container__content__sidebar__section">
+        <div class="account-container__content__sidebar  pb-3" style="background-color: transparent;">
+            <div class="account-container__content__sidebar__section" style="background-color: white; border-radius: 10px">
                 <div class=" account-container__content__sidebar__section--link">
                     <div class="mt-1">
                         <a href="/writer/manage-articles">
