--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/static/css/account-information/layout-account.css">
+    {{{_sections.css}}}
 </head>
 
 <body style="background-color: #E6E9F1">
@@ -139,6 +140,7 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
         crossorigin="anonymous"></script>
+{{{_sections.js}}}
 </body>
 
 </html>
