Đổi màu trùng với layout

--- a/views/vwAccount/login-register.hbs
+++ b/views/vwAccount/login-register.hbs
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="card">
-        <div class="card-header" style="background-color: rgba(250, 61, 61, 0.63);">
+        <div class="card-header" style="background-color: #dc3545;">
           <ul class="nav nav-tabs card-header-tabs" id="formTabs" role="tablist">
             <li class="nav-item flex-grow-1 text-center">
               <a class="nav-link active font-weight-bold" id="login-tab" data-toggle="tab" href="#login" role="tab"
