Đổi màu trùng với layout

--- a/views/vwAccount/forgot-password.hbs
+++ b/views/vwAccount/forgot-password.hbs
@@ -2,7 +2,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card text-center">
-                <div class="card-header h5 text-white" style="background-color: rgba(250, 61, 61, 0.63);">Thay đổi mật khẩu</div>
+                <div class="card-header h5 text-white" style="background-color: #dc3545;">Thay đổi mật khẩu</div>
                 <div class="card-body px-5">
                     <p class="card-text py-2">
                         Nhập email mà bạn dùng để đăng nhập.
@@ -10,7 +10,7 @@
                     <div class="form-outline">
                         <input type="email" id="typeEmail" class="form-control my-3" placeholder="Nhập email" />
                     </div>
-                    <a href="#" class="btn btn-primary w-100" style="background-color: rgba(250, 61, 61, 0.63); border: none">Đặt lại mật khẩu</a>
+                    <a href="#" class="btn btn-primary w-100" style="background-color: #dc3545; border: none">Đặt lại mật khẩu</a>
                     <div class="d-flex justify-content-between mt-4">
                     </div>
                 </div>
