--- a/views/vwHome/articleListByCat.hbs
+++ b/views/vwHome/articleListByCat.hbs
@@ -13,7 +13,53 @@
             <a href="/cat?catId={{id}}" class="category-list__category category-list__category--child">{{name}}</a>
         {{/each}}
     </div>
+    <div class="mt-3 px-3" style="width: 900px ">
+        {{#each this.articles}}
+            <div class="row mb-3 border-bottom py-3" style="border-radius: 10px; ">
+                <div class="col-3">
+                    <a href="">
+                        <img src="/others/{{main_thumb}}" class="rounded"
+                             style="object-fit:cover; width: 200px; height: 150px;"/>
+                    </a>
+                </div>
+                <div class="col-9 px-2 pl-0 d-flex flex-column">
+                    <p class="mb-0 px-2 article-text d-flex">
+                        {{#each categoryList}}
+                            <a href="" class="category-link mr-2">{{name}}</a>
+                        {{/each}}
+                    </p>
+                    {{!-- Thêm link vào bài viết sau nhe --}}
+                    <a class="font-weight-bold article-title" href="#">{{title}}</a>
+                    <div class="article-text mt-1">{{abstract}}</div>
+                    <p class="mb-0 article-text mt-auto">
+                        {{#each tagList}}
+                            <a href="" class="badge badge-pill badge-light mr-2 mt-auto">{{name}}</a>
+                        {{/each}}
+                    </p>
+                </div>
+            </div>
+        {{/each}}
+        <nav>
+            <ul class="pagination d-flex justify-content-center flex-wrap pagination-rounded-flat pagination-success">
+                <li class="page-item"><a class="page-link" href="/cat?catId={{this.catId}}&page={{this.prevPage}}"
+                    data-abc="true"><i class="fa fa-angle-left"></i></a>
+                </li>
+                {{#each this.page_items}}
+                    {{#if active}}
+                        <li class="page-item active"><a class="page-link" href="#" data-abc="true">{{value}}</a></li>
+                    {{else}}
+                        <li class="page-item "><a class="page-link" href="/cat?catId={{../this.catId}}&page={{value}}"
+                            data-abc="true">{{value}}</a></li>
+                    {{/if}}
 
-
+                {{/each}}
+                <li class="page-item ">
+                    <a class="page-link" href="/cat?catId={{this.catId}}&page={{this.nextPage}}"
+                    data-abc="true"><i class="fa fa-angle-right"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </div>
 
