--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -13,7 +13,7 @@
     {{{_sections.css}}}
 </head>
 
-<body style="background-color: #E6E9F1">
+<body style="background-color: #FFFFFF">
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f90606;">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         Tuổi Già ♥
