Hiển thị message đúng

--- a/views/vwAccount/login-register.hbs
+++ b/views/vwAccount/login-register.hbs
@@ -41,7 +41,7 @@
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
-                <strong>Không đăng nhập được.</strong> Hãy thử đăng nhập lại.
+                <strong>{{message}}</strong>
               </div>
               {{/if}}
               <div class="text-center mt-4">
