Giao diện quên mật khẩu và xác thực bằng OTP

--- a/views/vwAccount/forgot-password.hbs
+++ b/views/vwAccount/forgot-password.hbs
@@ -35,7 +35,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                Chúng tôi đã gửi mật khẩu mới tới email của bạn. Vui lòng đăng nhập lại vào hệ thống.
+                Chúng tôi đã gửi mã otp tới email của bạn. Vui lòng xác thực để tiếp tục đặt lại mật khẩu.
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeModalBtn">
@@ -75,7 +75,7 @@
 
         $('#successModal').modal('show');
         $('#closeModalBtn').click(function () {
-            window.location.href = '/login-register';
+            window.location.href = '/forgot-password/otp-verify';
         });
     });
 </script>
