--- a/views/vwHome/articleListByCat.hbs
+++ b/views/vwHome/articleListByCat.hbs
@@ -17,23 +17,23 @@
         {{#each this.articles}}
             <div class="row mb-3 border-bottom py-3" style="border-radius: 10px; ">
                 <div class="col-3">
-                    <a href="">
+                    <a href="/article?id={{article_id}}">
                         <img src="/others/{{main_thumb}}" class="rounded"
                              style="object-fit:cover; width: 200px; height: 150px;"/>
                     </a>
                 </div>
                 <div class="col-9 px-2 pl-0 d-flex flex-column">
-                    <p class="mb-0 px-2 article-text d-flex">
+                    <p class="mb-0 article-text d-flex">
                         {{#each categoryList}}
-                            <a href="" class="category-link mr-2">{{name}}</a>
+                            <a href="/cat?catId={{category_id}}" class="category-link mr-4">{{name}}</a>
                         {{/each}}
                     </p>
                     {{!-- Thêm link vào bài viết sau nhe --}}
-                    <a class="font-weight-bold article-title" href="#">{{title}}</a>
+                    <a class="font-weight-bold article-title" href="/article?id={{article_id}}">{{title}}</a>
                     <div class="article-text mt-1">{{abstract}}</div>
                     <p class="mb-0 article-text mt-auto">
                         {{#each tagList}}
-                            <a href="" class="badge badge-pill badge-light mr-2 mt-auto">{{name}}</a>
+                            <a href="/tag?tagId={{tag_id}}" class="badge badge-pill badge-light mr-2 mt-auto">{{name}}</a>
                         {{/each}}
                     </p>
                 </div>
@@ -51,7 +51,6 @@
                         <li class="page-item "><a class="page-link" href="/cat?catId={{../this.catId}}&page={{value}}"
                             data-abc="true">{{value}}</a></li>
                     {{/if}}
-
                 {{/each}}
                 <li class="page-item ">
                     <a class="page-link" href="/cat?catId={{this.catId}}&page={{this.nextPage}}"
